--- a/styles/globals.css
+++ b/styles/globals.css
@@ -601,8 +601,9 @@ h6 {
 
 /* Main content area within unified container */
 .unified-main-content {
-  @apply flex-1 flex flex-col min-h-0 bg-white;
+  @apply flex-1 flex flex-col min-h-0 bg-white overflow-y-auto;
 }
+
 
 /* Contacts sidebar - responsive design */
 .contacts-sidebar {
